# mm_poc_v2

./: .gitignore  AGENTS.md  DATA_STORAGE_EXPLAINED.md  README.md  bhsa_data.http  docker-compose.yml
backend/: .env.example  AGENTS.md  Dockerfile  Dockerfile.bhsa  Dockerfile.dev  README.md  entrypoint.sh  preload_data.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/ai/: __init__.py  client.py  context_builders.py
backend/app/ai/prompts/: __init__.py  clause_merge.py  events.py  participants.py  rehearsal.py  translation.py
backend/app/ai/schemas/: __init__.py  languages.py  tripod.py
backend/app/api/: ai.py  audio.py  auth.py  bhsa.py  discourse.py  events.py  export.py  metrics.py  options.py  participants.py  passages.py  pericopes.py  relations.py  tripod.py  users.py
backend/app/core/: auth_middleware.py  config.py  database.py
backend/app/models/: schemas.py  service_types.py
backend/app/services/: ai_prefill_service.py  ai_service.py  ai_streaming_service.py  audio_service.py  auth_service.py  bhsa_service.py  bhsa_sync_service.py  discourse_service.py  event_service.py  export_service.py  metrics_service.py  option_service.py  participant_service.py  passage_service.py  pericope_service.py  relation_service.py  tripod_data.py  tripod_service.py  user_service.py
backend/prisma/: schema.prisma
backend/prisma/migrations/20260109142120_init_participants/: migration.sql
backend/scripts/: import_pericopes.py  seed_admin.py  seed_field_options.py
docs/: DEBUG_CLAUSES_EVENTS_COUNT.md  EVENTS_CLAUSES_MISMATCH_ANALYSIS.md
(+119 files in other folders)
