[project]
name = "mm-poc-v2-backend"
version = "0.1.0"
description = "Meaning Map POC v2 Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "gunicorn==22.0.0",
    "prisma==0.15.0",
    "pydantic[email]==2.10.0",
    "pydantic-settings==2.6.0",
    "text-fabric==12.6.4",
    "anthropic==0.40.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "python-dotenv==1.0.1",
    "httpx==0.28.0",
    "python-multipart==0.0.9",
    "google-cloud-storage==2.14.0",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
